--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
       </div>
       <div class="col text-center text-sm-start mt-5 mt-md-0">
         <h2 class="c-blue text-center text-sm-start">¿Quiénes somos?</h2>
-        <p class="c-grey text-center text-sm-start">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+        <p class="c-grey text-center text-sm-start">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut
           labore et dolore magna aliqua. Dui sapien eget mi proin. Mauris pharetra et ultrices neque. Non diam phasellus
           vestibulum lorem. Quam vulputate dignissim suspendisse in est ante in. Nulla facilisi cras fermentum odio eu
           feugiat pretium nibh ipsum.</p>
@@ -160,7 +161,8 @@
       <div class="col-sm-6 d-flex justify-content-center align-items-center">
         <div>
           <h2 class="c-white h2-big text-center text-sm-start">CONTÁCTANOS</h2>
-          <p class="c-white text-center text-sm-start">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, facilis officia dolor natus
+          <p class="c-white text-center text-sm-start">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae,
+            facilis officia dolor natus
             facere at sint odio molestias totam tenetur quia ullam odit molestiae sed non eum eius accusantium aperiam.
           </p>
         </div>
